remove libera PVs and fixed beamstop_z not moving in HutchView problem

--- a/pilatusDhs/config/xf19id1-ws2.config
+++ b/pilatusDhs/config/xf19id1-ws2.config
@@ -15,12 +15,14 @@ pilatus.(class)=Pilatus::DetectorControl
 pilatus.(singleton)=true
 pilatus.dcss(ref)=dcss
 pilatus.fileMover(ref)=fileMover
-pilatus.host=10.19.0.7
+pilatus.host=10.19.0.3
 pilatus.port=41234
 pilatus.flatFieldFile=
 #pilatus.flatFieldFile=/home/det/p2_det/correct/goodpix_mask.tif
-pilatus.imageXSizePixels=520
-pilatus.imageYSizePixels=548
+pilatus.imageXSizePixels=2100
+pilatus.imageYSizePixels=2290
+#pilatus.imageXSizePixels=520
+#pilatus.imageYSizePixels=548
 #pilatus.imageXSizePixels=2462
 #pilatus.imageYSizePixels=2526
 pilatus.pixelXSizeUm=150
@@ -45,9 +47,6 @@ fileMover.imperson(ref)=imperson
 imperson.(class)=DCS::ImpersonWriteFiles
 imperson.host=localhost
 imperson.port=61001
-
-#imperson.host=localhost
-#imperson.port=61002
 
 #test classes
 testFileMover.(class)=Pilatus::TestFileMover
